@@ -2,6 +2,10 @@
  * CHANGELOG.
  */
 
+05082004 - Started 1.1.0 development branch with code to determine the total
+           length of a sample (thanks to Wesley, Eric, Wang, and Ahilan!)...
+           this patch was originally committed to CVS on 10252003, but it is
+           getting re-merged in the svn repository.
 05072004 - Backed out some commits, converted repository to Subversion, and
            branched off to a 1.1.0 development tree. Changed MikMod URL...old
            one is now a porn site.  :(
